--- a/pages/examples/empleados.html
+++ b/pages/examples/empleados.html
@@ -175,7 +175,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
+                <a href="../layout/top-nav.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Administrar Ventas</p>
                 </a>
