--- a/pages/examples/reporte_inventario.html
+++ b/pages/examples/reporte_inventario.html
@@ -143,22 +143,22 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="../examples/inventario.html" class="nav-link">
+                  <a href="inventario.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Inventario</p>
                   </a>
                 </li>
   
                 <li class="nav-item">
-                  <a href="../examples/reporte_inventario.html" class="nav-link">
+                  <a href="reporte_inventario.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Inventario</p>
                   </a>
-                </li>              
+                </li>            
                 
               </ul>
             </li>
-
+            
             <li class="nav-item">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas  fa-store"></i>
@@ -184,7 +184,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="boxed copy.html" class="nav-link">
+                  <a href="boxed.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Compras</p>
                   </a>
