--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="pages/examples/compras - copia.html" class="nav-link">
+                <a href="pages/layout/boxed copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
                 </a>
