--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tieda Militar HN | Tablero</title>
+  <title>Tienda Militar HN | Tablero</title>
   <link rel="icon" href="dist/img/icono.png">
 
 
