--- a/pages/examples/contactanos.html
+++ b/pages/examples/contactanos.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tienda Militar HN | Categorias</title>
+  <title>Tienda Militar HN | Contacto</title>
   <link rel="icon" href="../../dist/img/icono.png">
                                         
 
