--- a/pages/examples/proveedores.html
+++ b/pages/examples/proveedores.html
@@ -227,7 +227,7 @@
               </li>            
             </ul>
             <li class="nav-item">
-              <a href="pages/examples/contactanos.html" class="nav-link">
+              <a href="contactanos.html" class="nav-link">
                 <i class="nav-icon far fa-envelope"></i>
                 <p>
                   Contacto
