--- a/pages/examples/reporte_inventario.html
+++ b/pages/examples/reporte_inventario.html
@@ -41,10 +41,27 @@
         <li class="nav-item d-none d-sm-inline-block">
           <a href="../../index.html" class="nav-link">Inicio</a>
         </li>
-
       </ul>
 
       <!-- Right navbar links -->
+    <ul class="navbar-nav ml-auto">
+      <!-- Navbar Search --> <!-- ICONOS EN LA BARRA DE NAVEGACION -->
+      <li class="nav-item">
+        <a class="nav-link" data-widget="facebook" href="https://www.facebook.com/tiendamilitarhn5" role="button">
+          <i class="fab fa-facebook fa-1.5x"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-widget="phone" href="#" role="button">
+          <i class="fas fas fa-phone-alt fa-1.5x"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-widget="mapa" href="https://goo.gl/maps/ssuy5qxz1KHUqjWCA" role="button">
+          <i class="fas fa-map-marker-alt fa-1.5x"></i>
+        </a>
+      </li>
+    </ul>
 
     </nav>
     <!-- /.navbar -->
@@ -221,8 +238,16 @@
                     <p>Reporte de Ventas</p>
                   </a>
                 </li>
-
               </ul>
+              <li class="nav-item">
+                <a href="contactanos.html" class="nav-link">
+                  <i class="nav-icon far fa-envelope"></i>
+                  <p>
+                    Contacto
+                  </p>
+                </a>
+              </li>
+              
         </nav>
         <!-- /.sidebar-menu -->
       </div>
