--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tienda Militar HN | Tablero</title>
+  <title>Tieda Militar HN | Tablero</title>
   <link rel="icon" href="dist/img/icono.png">
 
 
@@ -202,7 +202,13 @@
               <li class="nav-item">
                 <a href="pages/layout/top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Orden de Compra</p>
+                  <p>Nueva Orden de Compra</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="pages/examples/devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
                 </a>
               </li>
               <li class="nav-item">
