agg logos a todos y vincule href

--- a/pages/examples/inventario.html
+++ b/pages/examples/inventario.html
@@ -165,7 +165,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="inventario.html" class="nav-link">
+            <a href="#" class="nav-link">
               <i class="nav-icon fas  fa-store"></i>
              
              
@@ -183,13 +183,19 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="../layout/top-nav-sidebar.html" class="nav-link">
+                <a href="../layout/top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Nueva Orden de Compra</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="../layout/boxed copy.html.html" class="nav-link">
+                <a href="devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../layout/boxed copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
                 </a>
