--- a/pages/examples/categorias.html
+++ b/pages/examples/categorias.html
@@ -59,8 +59,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../../index.html" class="brand-link">
-      <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Tienda Militar HN</span>
+      <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
 
     <!-- Sidebar -->
@@ -192,7 +191,19 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
                 </a>
-              </li>            
+              </li>  
+              <li class="nav-item">
+                <a href="devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../layout/boxed copy.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Reporte de Compras</p>
+                </a>
+              </li>           
               
             </ul>
           </li>
