--- a/pages/examples/clientes.html
+++ b/pages/examples/clientes.html
@@ -59,9 +59,9 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../../index.html" class="brand-link">
-      <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Tienda Militar HN</span>
+      <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
+
 
     <!-- Sidebar -->
     <div class="sidebar">
@@ -203,6 +203,18 @@
                 <a href="../layout/top-nav-sidebar.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Nueva Orden de Compra</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
+                </a>
+              </li>  
+              <li class="nav-item">
+                <a href="archivofactura.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
                 </a>
               </li>
               <li class="nav-item">
