--- a/pages/examples/contactanos.html
+++ b/pages/examples/contactanos.html
@@ -195,6 +195,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="archivofactura.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="../layout/boxed copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Compras</p>
