--- a/pages/examples/devolucionescompras.html
+++ b/pages/examples/devolucionescompras.html
@@ -184,17 +184,17 @@
                   <i class="far fa-circle nav-icon"></i>
                   <p>Nueva Orden de Compra</p>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a href="../layout/boxed copy.html.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Reporte de Compras</p>
-                </a>
-              </li>  
+              </li> 
               <li class="nav-item">
                 <a href="devolucionescompras.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Devoluciones sobre compras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="archivofactura.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
                 </a>
               </li>
               <li class="nav-item">
