detalles finales (logo añadido e interfaz de carga)

--- a/pages/examples/inventario.html
+++ b/pages/examples/inventario.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tienda Militar HN | Inventario</title>
-  <link rel="icon" href="../../dist/img/icono.png">
+  <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
 
   <!-- Google Font: Source Sans Pro -->
@@ -22,6 +22,12 @@
 <!-- Site wrapper -->
 <div class="wrapper">
   <!-- Navbar -->
+
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="../../dist/img/LOGO DIMINUTO.jpg" alt="logodiminuto" height="60" width="60">
+  </div>
+
+  
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
@@ -58,7 +64,7 @@
 
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
+    <!-- Brand Logo  IMAGEN LOGO ESQUINA IZQUIERDA SUPERIOR-->
     <a href="../../index.html" class="brand-link">
       <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
