--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tieda Militar HN | Tablero</title>
-  <link rel="icon" href="dist/img/icono.png">
+  <title>Tienda Militar HN | Tablero</title>
+  <link rel="icon" href="dist/img/LOGO DIMINUTO.jpg">
 
 
   <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
@@ -29,14 +29,22 @@
   <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
+
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 
-  <!-- Preloader -->
+  <!-- Preloader  PAGINA DE CARGA --> 
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="dist/img/LOGO DIMINUTO.jpg" alt="logodiminuto" height="60" width="60">
+  </div>
+
+
+  <!-- CODIGO PAGINA DE CARGA
   <div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__shake" src="dist/img/icono.png" alt="AdminLTELogo" height="60" width="60">
-  </div>
+  </div>  -->
 
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -75,9 +83,15 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../../index.html" class="brand-link">
+    <a href="index.html" class="brand-link">
       <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
+
+    <!-- CODIGO VIEJO DEL LOGO
+    <a href="../../index.html" class="brand-link">
+      <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <span class="brand-text font-weight-light">Tienda Militar HN</span>
+    </a>  -->
 
     <!-- Sidebar -->
     <div class="sidebar">
@@ -201,13 +215,7 @@
               <li class="nav-item">
                 <a href="pages/layout/top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Nueva Orden de Compra</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/examples/devolucionescompras.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Devoluciones sobre compras</p>
+                  <p>Orden de Compra</p>
                 </a>
               </li>
               <li class="nav-item">
