--- a/pages/examples/proveedores.html
+++ b/pages/examples/proveedores.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tienda Militar HN | Proveedores</title>
-  <link rel="icon" href="../../dist/img/icono.png">
+  <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -21,6 +21,12 @@
 <!-- Site wrapper -->
 <div class="wrapper">
   <!-- Navbar -->
+
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="../../dist/img/LOGO DIMINUTO.jpg" alt="logodiminuto" height="60" width="60">
+  </div>
+
+  
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
@@ -59,8 +65,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="../../index.html" class="brand-link">
-      <img src="../../dist/img/icono.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Tienda Militar HN</span>
+      <img src="../../dist/img/LOGO PEQUEÑO.jpg" alt="TIENDA LOGO" class="img-fluid">
     </a>
 
     <!-- Sidebar -->
