--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Tienda Militar HN | Tablero</title>
   <link rel="icon" href="dist/img/LOGO DIMINUTO.jpg">
 
-
   <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
 
   <!-- Google Font: Source Sans Pro -->
@@ -215,7 +214,19 @@
               <li class="nav-item">
                 <a href="pages/layout/top-nav-sidebar copy.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Orden de Compra</p>
+                  <p>Nueva Orden de Compra</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="devolucionescompras.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Devoluciones sobre compras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="archivofactura.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Archivo de Factura</p>
                 </a>
               </li>
               <li class="nav-item">
