--- a/pages/examples/contactanos.html
+++ b/pages/examples/contactanos.html
@@ -333,6 +333,7 @@
     </div>
     <strong>Copyright &copy; 2022 <a href="">Tienda Militar HN</a>.</strong> Todos los derechos reservados.
 
+    <!-- ICONOS GRANDES REDES SOCIALES
     <div class="mt-4 product-share">
         <a href="#" class="text-blue">
           <i class="fab fa-facebook fa-3x"></i>
@@ -344,7 +345,7 @@
           <i class="fas fa-map-marker-alt fa-3x"></i>
         </a>
       </div>
-  </footer>
+  </footer  >-->
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
