--- a/pages/examples/login.html
+++ b/pages/examples/login.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tienda Militar HN</title>
-  <link rel="icon" href="../../dist/img/icono.png">
+  <title>Tienda Militar HN | Login </title>
+  <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -23,11 +23,13 @@
   </div>
   <!-- /.login-logo -->
   <div class="card">
-    <img src="../../dist/img/logo_tm.png" >
+    <img src="../../dist/img/LOGO GRANDE.jpg" >
     <div class="card-body login-card-body">
      
+        <!-- METODO POST DEL BOTON INGRESAR 
+      <form action="/index.html" method="post">  -->
 
-      <form action="../../index3.html" method="post">
+        <form action="/index.html">
         <div class="input-group mb-3">
           <input type="email" class="form-control" placeholder="Correo Electrónico">
           <div class="input-group-append">
