--- a/pages/examples/forgot-password.html
+++ b/pages/examples/forgot-password.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tienda Militar HN</title>
+  <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -20,10 +21,10 @@
     
   </div>
   <!-- /.login-logo -->
-  <div class="card">
-    <img src="../../dist/img/logo_tm.png" >
+  <div class="card xs">
+    <img src="../../dist/img/LOGO GRANDE.jpg" >
     <div class="card-body login-card-body">
-      <p class="login-box-msg">¿Olvidaste tu contraseña? Aquí puede recuperar fácilmente una nueva contraseña.</p>
+      <p class="login-box-msg"><strong>¿Olvidaste tu contraseña? Aquí puedes recuperar fácilmente tu contraseña.</strong>  </p>
 
       <form action="recover-password.html" method="post">
         <div class="input-group mb-3">
