modulo personas añadido y punto reorden inventario

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
               </li>
 
               <li class="nav-item">
+                <a href="pages/examples/puntoreorden.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Punto Reorden
+                    <span class="right badge badge-danger">!</span>
+                  </p>
+                </a>
+              </li>
+
+              <li class="nav-item">
                 <a href="pages/examples/reporte_inventario.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reporte de Inventario</p>
