Agg nuevos reportes and actualizado ventas

--- a/pages/examples/reporte_cliente.html
+++ b/pages/examples/reporte_cliente.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tienda Militar HN | inventario</title>
+  <title>Tienda Militar HN | Reporte de Clientes</title>
   <link rel="icon" href="../../dist/img/LOGO DIMINUTO.jpg">
 
   <!-- Google Font: Source Sans Pro -->
@@ -333,12 +333,12 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Reporte de Inventario</h1>
+          <h1>Reporte de Clientes</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-            <li class="breadcrumb-item active">Reporte de inventario</li>
+            <li class="breadcrumb-item active">Reporte de Cliente</li>
           </ol>
         </div>
       </div>
