Agg Bitacora and backup

--- a/pages/examples/puntoreorden.html
+++ b/pages/examples/puntoreorden.html
@@ -300,15 +300,32 @@
                 </li>
               </ul>
 
-              <li class="nav-item">
-                <a href="roles.html" class="nav-link">
-                  <i class="nav-icon fas fa-table"></i>
-                  <p>
-                    Seguridad
-                  </p>
-                </a>
-              </li>
-
+            </li> 
+            <li class="nav-item">
+              <a href="roles.html" class="nav-link">
+                <i class="nav-icon fas fa-table"></i>
+                <p>
+                  Seguridad
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="BackUp.html" class="nav-link">
+                <i class="nav-icon fas  fa-archive"></i>
+             
+                <p>
+                  BackUp
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="Bitacora.html" class="nav-link">
+                <i class="nav-icon fas  fa-calendar"></i>
+             
+                <p>
+                  Bitacora
+                </p>
+              </a>
             </li> 
               <li class="nav-item">
                 <a href="contactanos.html" class="nav-link">
