--- a/pages/examples/archivofactura.html
+++ b/pages/examples/archivofactura.html
@@ -298,14 +298,46 @@
             </ul>
 
             <li class="nav-item">
-              <a href="roles.html" class="nav-link">
+              <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-table"></i>
                 <p>
                   Seguridad
+                  <i class="fas fa-angle-left right"></i>
                 </p>
               </a>
-            </li>
 
+              <ul class="nav nav-treeview">
+
+                <li class="nav-item">
+                  <a href="roles.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Permisos Establecidos</p>
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a href="usuariosroles.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Usuarios Roles</p>
+                  </a>
+                </li>    
+
+                <li class="nav-item">
+                <a href="BackUp.html" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>BackUp</p>
+                </a>
+                </li>
+                
+
+                <li class="nav-item">
+                  <a href="Bitacora.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Bitacora</p>
+                    </a>
+                    </li>               
+          </ul>
+        </li>
 
           </li>
           <li class="nav-item">
