--- a/pages/examples/roles.html
+++ b/pages/examples/roles.html
@@ -295,13 +295,46 @@
               </ul>
 
               <li class="nav-item">
-                <a href="roles.html" class="nav-link">
+                <a href="#" class="nav-link">
                   <i class="nav-icon fas fa-table"></i>
                   <p>
                     Seguridad
+                    <i class="fas fa-angle-left right"></i>
                   </p>
                 </a>
-              </li>
+
+                <ul class="nav nav-treeview">
+
+                  <li class="nav-item">
+                    <a href="roles.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Permisos Establecidos</p>
+                    </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a href="usuariosroles.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Usuarios Roles</p>
+                    </a>
+                  </li>    
+
+                  <li class="nav-item">
+                  <a href="BackUp.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>BackUp</p>
+                  </a>
+                  </li>
+                  
+
+                  <li class="nav-item">
+                    <a href="Bitacora.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Bitacora</p>
+                      </a>
+                      </li>               
+            </ul>
+          </li>
 
             </li>     
               <li class="nav-item">
@@ -326,7 +359,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Roles</h1>
+            <h1>Roles Accesos</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
