--- a/pages/examples/login.html
+++ b/pages/examples/login.html
@@ -57,7 +57,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block" href="forgot-password.html">Ingresar  </button>
+            <a href="../../index.html"> <img src="../../dist/img/ingresar.PNG" ></a>
             
           </div>
           <!-- /.col -->
