--- a/pages/examples/Bitacora.html
+++ b/pages/examples/Bitacora.html
@@ -238,7 +238,7 @@
             </ul>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="nav-icon fas   fa-warehouse"></i>
+                <i class="nav-icon fas fa-book"></i>
                
                
                 <p>
@@ -502,6 +502,11 @@
 </div>
 <!-- ./wrapper -->
 
+<!-- Bootstrap 5 -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
@@ -521,8 +526,8 @@
 <script src="../../plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 <!-- AdminLTE App -->
 <script src="../../dist/js/adminlte.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="../../dist/js/demo.js"></script>
+
+
 <!-- Page specific script -->
 <script>
   $(function () {
