--- a/pages/examples/categorias.html
+++ b/pages/examples/categorias.html
@@ -239,7 +239,7 @@
           </li>  
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas   fa-warehouse"></i>
+              <i class="nav-icon fas fa-book"></i>
              
              
               <p>
