--- a/pages/examples/roles.html
+++ b/pages/examples/roles.html
@@ -238,7 +238,7 @@
              </ul>  
              <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="nav-icon fas   fa-warehouse"></i>
+                <i class="nav-icon fas fa-book"></i>
                
                
                 <p>
@@ -1185,7 +1185,6 @@
 <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="../../dist/js/adminlte.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="../../dist/js/demo.js"></script>
+
 </body>
 </html>
