actualizacion cliente actualizacion login

--- a/pages/examples/recover-password.html
+++ b/pages/examples/recover-password.html
@@ -21,7 +21,7 @@
   </div>
   <!-- /.login-logo -->
   <div class="card">
-    <img src="../../dist/img/logo_tm.png" >
+    <img src="../../dist/img/LOGO GRANDE.jpg" >
     <div class="card-body login-card-body">
       <p class="login-box-msg">Estás a un paso de tu nueva contraseña, recupera tu contraseña ahora..</p>
 
