Actualizado parte de ver detalle des venta, y renombrado CodigoUsuario

--- a/pages/examples/empleados.html
+++ b/pages/examples/empleados.html
@@ -440,7 +440,7 @@
                   <thead>
                   <tr>
                     <th style="width:10px">#</th>
-                     <th>Código Empleado</th>
+                     <th>Código Usuario</th>
                      <th>DNI</th>
                      <th>Usuario</th>
                      <th>Nombre</th>
