--- a/pages/examples/compras.html
+++ b/pages/examples/compras.html
@@ -21,6 +21,11 @@
 <!-- Site wrapper -->
 <div class="wrapper">
 
+
+  <!-- Preloader  PAGINA DE CARGA --> 
+  <div class="preloader flex-column justify-content-center align-items-center">
+    <img class="animation__shake" src="../../dist/img/LOGO DIMINUTO.jpg" alt="logodiminuto" height="60" width="60">
+  </div>
   
 
   
